Added environment screen info

--- a/patent-search-app/src/main/resources/templates/layout.html
+++ b/patent-search-app/src/main/resources/templates/layout.html
@@ -5,6 +5,21 @@
    <!--  <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" href="../../css/bootstrap.min.css"/> -->
     <link rel="stylesheet" href="../../css/screen.css" th:href="@{/css/screen.css}" />
     <link rel="stylesheet" href="../../css/patent.css" th:href="@{/css/patent.css}" />
+    <style type="text/css">
+    fieldset { border:1px solid #336699;
+    border-radius: 5px; 
+    padding: 0.2em 1.5em;
+    width: 70%;
+    }
+    legend {
+  padding: 0.2em 0.5em;
+  border:1px solid #336699;
+  color: #336699;
+  font-size:90%;
+  text-align:left;
+  border-radius: 5px;
+  }
+    </style>
   </head>
   <body class="tundra">
     <div id="page" class="container">
