--- a/patent-search-app/src/main/resources/templates/patents/main.html
+++ b/patent-search-app/src/main/resources/templates/patents/main.html
@@ -14,9 +14,50 @@
 		    <li>Self-Healing of Applications (1 of the 4 HA features of CF)</li>
 		    <li>Zero Downtime (Blue-Green) Deployment.</li>
 	  </ul>
+	  <fieldset>
+  		<legend>Environment Information:</legend>
+  		 <table class="vcapInfo">
+  		   <tr>
+  		     <th>Current Server Time:</th>
+  		     <td th:text="${serverTime}">now</td>
+  		   </tr>
+  		   <tr>
+  		     <th>Application Port:</th>
+  		     <td th:text="${port}"></td>
+  		   </tr>
+  		   <tr>
+  		     <th>Instance ID:</th>
+  		     <td th:text="${vcapApplication['instance_id']}"></td>
+  		   </tr>
+  		   <tr>
+  		     <th>Instance Index:</th>
+  		     <td th:text="${vcapApplication['instance_index']}"></td>
+  		   </tr>
+  		   <tr>
+  		     <th>Application Start Time:</th>
+  		     <td th:text="${vcapApplication['started_at']}"></td>
+  		   </tr>
+  		   <tr>
+  		     <th>Services:</th>
+  		     <td> 
+  		       <ul th:each="service : ${vcapServices}">
+  		         <li th:text="${service}"></li>
+  		       </ul>
+  		     </td>
+  		   </tr>
+  		 </table>  		 
+ 	  </fieldset>
 	  <p>
-        <a class="button" th:href="@{/patents}">Search Patents</a>
-         <a href="kill" class="button">Kill Application</a>
+	    <table class="appControls">
+	      <tr>
+	        <td class="control">
+	          <a class="button" th:href="@{/patents}">Search Patents</a>
+        	</td>
+            <td class="alert">
+              <a href="kill" class="killme">Kill Application</a>
+            </td>
+	      </tr>
+	    </table>
       </p>
     </div>
   </body>
