--- a/patent-search-app/src/main/resources/static/css/patent.css
+++ b/patent-search-app/src/main/resources/static/css/patent.css
@@ -42,7 +42,7 @@ a.button, button {
 
 margin: 0.7em 0.5em 0.7em 0;
 padding: 5px 10px 5px 7px;
-border:1px solid #c2e1ef;
+border:1px solid #336699;
 background-color: #f8f8f8;
 font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
 font-size: 100%;
@@ -51,6 +51,61 @@ text-decoration: none;
 font-weight: bold;
 color:#336699;
 cursor: pointer;
+}
+
+a.killme {
+margin: 0.7em 0.5em 0.7em 0;
+padding: 5px 10px 5px 7px;
+border:1px solid red;
+background-color: #f8f8f8;
+font-family: "Lucida Grande", Tahoma, Arial, Verdana, sans-serif;
+font-size: 100%;
+line-height: 130%;
+text-decoration: none;
+font-weight: bold;
+color:red;
+cursor: pointer;
+}
+
+table.appControls  {
+	border-collapse: collapse;
+	border-width: thick;
+	width: 500px;
+	margin: 0px;
+	padding: 0px;
+}
+
+.appControls tr {
+	margin: 0px;
+	padding: 0px;
+}
+
+.appControls td.control {
+	text-align: left;
+	margin: 0px;
+	padding: 0px;
+}
+
+.appControls td.alert {
+	text-align: right;
+	margin: 0px;
+	padding: 0px;
+}
+
+.vcapInfo table {
+	border-collapse: collapse;
+}
+
+.vcapInfo th {
+	text-align: right;
+	font-size: 90%;
+	vertical-align: top;
+}
+
+.vcapInfo td {
+	text-align: left;
+	font-size: 90%;
+	vertical-align: top;
 }
 
 button:hover, a.button:hover {
