--- a/patent-search-app/src/main/resources/templates/layout.html
+++ b/patent-search-app/src/main/resources/templates/layout.html
@@ -37,7 +37,7 @@
 				
 			</div>
 		</div>
-		<div id="menu" style="background-color:green">
+		<div id="menu">
 			<ul>
 				<li><a href="#">PATENTS</a></li>
 				<li class="nav_separator"></li>
